--- a/css선택자.html
+++ b/css선택자.html
@@ -40,6 +40,11 @@
             font-size: 20px;
         }
 
+        .box{
+            border: 2px solid black;
+            height: 100px;
+        }
+
     </style>
 </head>
 <body>
@@ -53,6 +58,13 @@
 
     <input type="text">
     <input class="big" type="password">
+
+    <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
 
 
 </body>
