--- a/position.html
+++ b/position.html
@@ -36,6 +36,10 @@
             color: white;
             font-size: 30px;
             font-weight: bold;
+
+            /* 부모의 우측 하단 모서리 기준으로 위치 조정 */
+            bottom: 50px;
+            right: 50px;
         }
         
         
@@ -125,6 +129,7 @@
     </div>
 
     <div class="top-btn">
+        <!-- a태그 href에 #을 넣거나 빈란으로 두면 클릭시 화면상단으로 이동 -->
         <a href="">top</a>
     </div>
 
